feat(review): add review deletion and null event handling