@@ -1,16 +1,28 @@
 package com.gorong.backend.domain.review.service;
 
+import com.gorong.backend.domain.event.entity.Event;
+import com.gorong.backend.domain.event.repository.EventRepository;
+import com.gorong.backend.domain.group.entity.EventParticipation;
+import com.gorong.backend.domain.group.repository.EventParticipationRepository;
 import com.gorong.backend.domain.review.entity.Review;
 import com.gorong.backend.domain.review.entity.ReviewImage;
-import com.gorong.backend.domain.review.repository.ReviewRepository;
 import com.gorong.backend.domain.review.repository.ReviewImageRepository;
+import com.gorong.backend.domain.review.repository.ReviewRepository;
+import com.gorong.backend.domain.user.entity.User;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -19,167 +31,257 @@ public class ReviewService {
 
     private final ReviewRepository reviewRepository;
     private final ReviewImageRepository reviewImageRepository;
+    private final EventParticipationRepository eventParticipationRepository;
+    private final EventRepository eventRepository;
 
-    // ─── CREATE: 리뷰 생성 ───
-    public Review createReview(Long userId, Long eventId, Integer rating, String title, String content, String authorName) {
-        // 검증
+    public Review upsertQuickReview(Long userId, Long eventId, Integer rating, String reviewText, String authorName, List<ImagePayload> images) {
         validateRating(rating);
-        validateTitle(title);
+        validateReviewText(reviewText);
         validateAuthorName(authorName);
+        validateImageCount(images);
 
-        Review review = Review.builder()
-                .rating(rating)
-                .title(title)
-                .content(content)
-                .authorName(authorName)
-                .reviewDate(OffsetDateTime.now())
-                .userId(userId)
-                .eventId(eventId)
-                .build();
+        Review review = reviewRepository.findTopByUserIdAndEventIdOrderByCreatedAtDesc(userId, eventId)
+                .orElseGet(() -> Review.builder()
+                        .userId(userId)
+                        .eventId(eventId)
+                        .authorName(authorName)
+                        .title("임시 포스팅")
+                        .reviewDate(OffsetDateTime.now())
+                        .build());
 
+        assertReviewMetaEditable(review, rating, reviewText);
+
+        review.updateQuickReview(rating, reviewText);
+        syncImages(review, images);
         return reviewRepository.save(review);
     }
 
-    // ─── CREATE: 리뷰에 이미지 추가 ───
-    public ReviewImage addImageToReview(Long reviewId, String imageUrl) {
-        Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다. ID: " + reviewId));
+    public Review publishPosting(Long userId, PostingPayload payload) {
+        validateParticipatedEvent(userId, payload.getEventId());
+        validateRating(payload.getRating());
+        validateReviewText(payload.getReviewText());
+        validateTitle(payload.getTitle());
+        validateImageCount(payload.getImages());
 
-        ReviewImage reviewImage = ReviewImage.builder()
-                .review(review)
-                .imageUrl(imageUrl)
-                .build();
+        Review review = resolvePostingTarget(userId, payload);
+        assertReviewMetaEditable(review, payload.getRating(), payload.getReviewText());
 
-        review.addReviewImage(reviewImage);
-        return reviewImageRepository.save(reviewImage);
+        review.updateQuickReview(payload.getRating(), payload.getReviewText());
+        review.updateContent(payload.getTitle().trim(), normalizeText(payload.getContents()));
+        review.markPublished();
+        syncImages(review, payload.getImages());
+        return reviewRepository.save(review);
     }
 
-    // ─── READ: 행사별 리뷰 목록 (최신순) ───
     @Transactional(readOnly = true)
-    public List<Review> getReviewsByEventId(Long eventId) {
-        return reviewRepository.findByEventIdOrderByLatest(eventId);
+    public Page<Review> getEventReviews(Long eventId, Pageable pageable) {
+        return reviewRepository.findByEventIdOrderByLatest(eventId, pageable);
     }
 
-    // ─── READ: 행사별 리뷰 목록 (별점 높은순) ───
     @Transactional(readOnly = true)
-    public List<Review> getReviewsByEventIdHighRating(Long eventId) {
-        return reviewRepository.findByEventIdOrderByRatingDesc(eventId);
+    public Page<Review> getPublishedPosts(Pageable pageable) {
+        return reviewRepository.findByStatusOrderByCreatedAtDesc(Review.PostStatus.PUBLISHED, pageable);
     }
 
-    // ─── READ: 행사별 리뷰 목록 (별점 낮은순) ───
     @Transactional(readOnly = true)
-    public List<Review> getReviewsByEventIdLowRating(Long eventId) {
-        return reviewRepository.findByEventIdOrderByRatingAsc(eventId);
-    }
-
-    // ─── READ: 사용자별 리뷰 목록 ───
-    @Transactional(readOnly = true)
-    public List<Review> getReviewsByUserId(Long userId) {
-        return reviewRepository.findByUserId(userId);
-    }
-
-    // ─── READ: 특정 리뷰 조회 ───
-    @Transactional(readOnly = true)
-    public Review getReviewById(Long reviewId) {
+    public Review getPosting(Long reviewId) {
         return reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다. ID: " + reviewId));
+                .orElseThrow(() -> new IllegalArgumentException("포스팅을 찾을 수 없습니다."));
     }
 
-    // ─── READ: 리뷰 이미지 목록 ───
+    @Transactional(readOnly = true)
+    public Review getTemplate(Long userId, Long eventId) {
+        return reviewRepository.findTopByUserIdAndEventIdOrderByCreatedAtDesc(userId, eventId)
+                .orElse(null);
+    }
+
+    @Transactional(readOnly = true)
+    public List<ParticipatedEventView> getParticipatedEvents(Long userId) {
+        Map<Long, ParticipatedEventView> deduplicated = new LinkedHashMap<>();
+        for (EventParticipation participation : eventParticipationRepository.findByUserIdOrderByAppliedAtDesc(userId)) {
+            Long eventId = parseEventId(participation.getEventContentId());
+            if (eventId == null || deduplicated.containsKey(eventId)) {
+                continue;
+            }
+            deduplicated.put(eventId, new ParticipatedEventView(
+                    eventId,
+                    participation.getEventTitle(),
+                    participation.getAppliedAt() == null ? null : participation.getAppliedAt().toString()
+            ));
+        }
+        return new ArrayList<>(deduplicated.values());
+    }
+
+    @Transactional(readOnly = true)
+    public String resolveEventTitle(Long eventId) {
+
+        if (eventId == null) {
+            return "행사 정보 없음";
+        }
+
+        return eventRepository.findById(eventId)
+                .map(Event::getTitle)
+                .filter(title -> !title.isBlank())
+                .orElse("행사 #" + eventId);
+    }
+
+    @Transactional(readOnly = true)
+    public boolean isReviewMetaEditable(Review review) {
+        return review.isReviewMetaEditable(OffsetDateTime.now());
+    }
+
     @Transactional(readOnly = true)
     public List<ReviewImage> getImagesByReviewId(Long reviewId) {
         return reviewImageRepository.findByReviewId(reviewId);
     }
 
-    // ─── READ: 행사별 리뷰 개수 ───
-    @Transactional(readOnly = true)
-    public Long getReviewCountByEventId(Long eventId) {
-        return reviewRepository.countByEventId(eventId);
-    }
+    @Transactional
+    public void deleteReview(Long reviewId, User user) {
 
-    // ─── READ: 행사별 평균 별점 ───
-    @Transactional(readOnly = true)
-    public Double getAverageRatingByEventId(Long eventId) {
-        return reviewRepository.findAverageRatingByEventId(eventId)
-                .orElse(0.0);
-    }
-
-    // ─── UPDATE: 리뷰 수정 (권한 체크) ───
-    public Review updateReview(Long reviewId, Long currentUserId, Integer rating, String title, String content) {
         Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다. ID: " + reviewId));
+                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다."));
 
-        // 💡 권한 체크: 본인의 리뷰만 수정 가능
-        if (!review.getUserId().equals(currentUserId)) {
-            throw new IllegalArgumentException("본인의 리뷰만 수정할 수 있습니다.");
+        boolean isAuthor =
+                review.getUserId().equals(user.getId());
+
+        boolean isAdmin =
+                user.getRoleType() == User.RoleType.ADMIN;
+
+        if (!isAuthor && !isAdmin) {
+            throw new IllegalArgumentException("삭제 권한이 없습니다.");
         }
 
-        // 검증
-        if (rating != null) {
-            validateRating(rating);
-            review = Review.builder()
-                    .id(review.getId())
-                    .rating(rating)
-                    .title(title != null ? title : review.getTitle())
-                    .content(content != null ? content : review.getContent())
-                    .authorName(review.getAuthorName())
-                    .reviewDate(review.getReviewDate())
-                    .userId(review.getUserId())
-                    .eventId(review.getEventId())
-                    .createdAt(review.getCreatedAt())
-                    .reviewImages(review.getReviewImages())
+        reviewRepository.delete(review);
+    }
+
+    private Review resolvePostingTarget(Long userId, PostingPayload payload) {
+        if (payload.getReviewId() != null) {
+            Review review = getPosting(payload.getReviewId());
+            if (!Objects.equals(review.getUserId(), userId)) {
+                throw new IllegalArgumentException("본인 글만 수정할 수 있습니다.");
+            }
+            return review;
+        }
+
+        return reviewRepository.findTopByUserIdAndEventIdOrderByCreatedAtDesc(userId, payload.getEventId())
+                .orElseGet(() -> Review.builder()
+                        .userId(userId)
+                        .eventId(payload.getEventId())
+                        .authorName(payload.getAuthorName())
+                        .title(payload.getTitle())
+                        .reviewDate(OffsetDateTime.now())
+                        .build());
+    }
+
+    private void syncImages(Review review, List<ImagePayload> images) {
+        review.getReviewImages().clear();
+        if (images == null) {
+            return;
+        }
+
+        for (int index = 0; index < images.size(); index++) {
+            ImagePayload image = images.get(index);
+            ReviewImage reviewImage = ReviewImage.builder()
+                    .imageUrl(image.getImageUrl())
+                    .originalImgName(image.getOriginalImgName())
+                    .saveImgName(image.getSaveImgName())
+                    .displayOrder(index)
                     .build();
+            review.addReviewImage(reviewImage);
         }
-
-        return reviewRepository.save(review);
     }
 
-    // ─── DELETE: 리뷰 삭제 (권한 체크) ───
-    public void deleteReview(Long reviewId, Long currentUserId) {
-        Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다. ID: " + reviewId));
+    private void validateParticipatedEvent(Long userId, Long eventId) {
+        boolean participated = eventParticipationRepository.findByUserIdOrderByAppliedAtDesc(userId).stream()
+                .map(EventParticipation::getEventContentId)
+                .map(this::parseEventId)
+                .anyMatch(id -> Objects.equals(id, eventId));
 
-        // 💡 권한 체크: 본인의 리뷰만 삭제 가능
-        if (!review.getUserId().equals(currentUserId)) {
-            throw new IllegalArgumentException("본인의 리뷰만 삭제할 수 있습니다.");
+        if (!participated) {
+            throw new IllegalArgumentException("참여한 행사만 포스팅할 수 있습니다.");
         }
-
-        reviewRepository.deleteById(reviewId);
     }
 
-    // ─── DELETE: 리뷰 이미지 삭제 ───
-    public void deleteImage(Long imageId, Long reviewId, Long currentUserId) {
-        Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다. ID: " + reviewId));
-
-        // 💡 권한 체크: 본인의 리뷰의 이미지만 삭제 가능
-        if (!review.getUserId().equals(currentUserId)) {
-            throw new IllegalArgumentException("본인의 리뷰의 이미지만 삭제할 수 있습니다.");
+    private void assertReviewMetaEditable(Review review, Integer requestedRating, String requestedText) {
+        if (review.getId() == null) {
+            return;
         }
 
-        ReviewImage image = reviewImageRepository.findById(imageId)
-                .orElseThrow(() -> new IllegalArgumentException("이미지를 찾을 수 없습니다. ID: " + imageId));
-
-        review.removeReviewImage(image);
-        reviewImageRepository.deleteById(imageId);
+        boolean changedRating = requestedRating != null && !Objects.equals(review.getRating(), requestedRating);
+        boolean changedText = requestedText != null && !normalizeText(requestedText).equals(normalizeText(review.getReviewText()));
+        if ((changedRating || changedText) && !review.isReviewMetaEditable(OffsetDateTime.now())) {
+            throw new IllegalArgumentException("한 줄 리뷰와 발자국 평점은 작성 후 7일까지만 수정할 수 있습니다.");
+        }
     }
 
-    // ─── 검증 메서드 ───
+    private Long parseEventId(String rawEventId) {
+        try {
+            return rawEventId == null ? null : Long.valueOf(rawEventId);
+        } catch (NumberFormatException exception) {
+            return null;
+        }
+    }
+
     private void validateRating(Integer rating) {
         if (rating == null || rating < 1 || rating > 5) {
-            throw new IllegalArgumentException("별점은 1~5 사이여야 합니다.");
+            throw new IllegalArgumentException("평점은 1점에서 5점 사이여야 합니다.");
+        }
+    }
+
+    private void validateReviewText(String reviewText) {
+        if (normalizeText(reviewText).isBlank()) {
+            throw new IllegalArgumentException("한 줄 리뷰를 입력해 주세요.");
         }
     }
 
     private void validateTitle(String title) {
-        if (title == null || title.trim().isEmpty()) {
-            throw new IllegalArgumentException("제목은 필수입니다.");
+        if (normalizeText(title).isBlank()) {
+            throw new IllegalArgumentException("게시글 제목을 입력해 주세요.");
         }
     }
 
     private void validateAuthorName(String authorName) {
-        if (authorName == null || authorName.trim().isEmpty()) {
-            throw new IllegalArgumentException("작성자명은 필수입니다.");
+        if (normalizeText(authorName).isBlank()) {
+            throw new IllegalArgumentException("작성자 정보가 없습니다.");
         }
+    }
+
+    private void validateImageCount(List<ImagePayload> images) {
+        if (images != null && images.size() > 5) {
+            throw new IllegalArgumentException("이미지는 최대 5장까지 첨부할 수 있습니다.");
+        }
+    }
+
+    private String normalizeText(String value) {
+        return value == null ? "" : value.trim();
+    }
+
+    @Getter
+    @AllArgsConstructor
+    public static class ImagePayload {
+        private String imageUrl;
+        private String originalImgName;
+        private String saveImgName;
+    }
+
+    @Getter
+    @AllArgsConstructor
+    public static class PostingPayload {
+        private Long reviewId;
+        private Long eventId;
+        private String title;
+        private String reviewText;
+        private Integer rating;
+        private String contents;
+        private String authorName;
+        private List<ImagePayload> images;
+    }
+
+    @Getter
+    @AllArgsConstructor
+    public static class ParticipatedEventView {
+        private Long eventId;
+        private String title;
+        private String appliedAt;
     }
 }
